projects/vb6parse/snapshots/parsers/cst/library/interaction/command/command_in_assignment.snap
---
source: projects/vb6parse/tests/library/interaction/command.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: DimStatement
      children:
        - kind: DimKeyword
          text: Dim
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: cmdLine
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: StringKeyword
          text: String
        - kind: Newline
          text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: cmdLine
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: Command
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children: []
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
